<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="action_switch_camera">Switch Camera</string>
    <string name="enroll">Enroll</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="hello">Hello World, FbseActivity!</string>
    <string name="app_name">信智互联</string>
    <string name="login_label_signin">登 录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_datle">DatleActivity</string>
    <string name="white">#FFFFFF</string>
    <string name="black">#000000</string>
    <string name="hui">#8c8989</string>
    <string name="finished">已完成</string>
    <string name="xuhao">序号</string>
    <string name="wenjuanliebiao">问卷名</string>
    <string name="wenjuanming">问卷列表</string>
    <string name="jifen">积分</string>
    <string name="renwuhuishu">任务回数</string>
    <string name="yihuidashu">完成回数</string>
    <string name="shangyiye">上一页</string>
    <string name="xiayiye">下一页</string>
    <string name="wenjuanxiangxi">问卷详细</string>
    <string name="dianpubianma">店 铺 名： </string>
    <string name="dengluming">登 录 名 </string>
    <string name="mimashezhi">密码设置 </string>
    <string name="mimaxiugai">密码修改 </string>
    <string name="yuanmima">原  密 码 ： </string>
    <string name="xinmima">新  密 码 ：  </string>
    <string name="mimaqueren">密码确认：</string>
    <string name="xinxixiugai">信息修改</string>
    <string name="nocustumer">没有顾客</string>
    <string name="custumerlist">顾客列表</string>
    <string name="heshixinxi">请核实顾客信息并选择</string>
    <string name="nametest">张三</string>
    <string name="vipname">会员姓名</string>
    <string name="viptype">手机号码:</string>
    <string name="kingcard">金卡</string>
    <string name="phone">会员类型:</string>
    <string name="phonenumber">138****234</string>
    <string name="xiaofeixiguan">消费习惯:</string>
    <string name="tuijianxinxi">推荐信息:</string>
    <string name="yonghuxinxi">用户信息</string>
    <string name="dengluzhanghao">账号</string>
    <string name="denglupass">密码</string>
    <string name="jizhupass">记住密码</string>
    <string name="autodenglu">自动登录</string>
    <string name="funcname">功能表</string>
    <string name="onpro">正在加载数据</string>
    <string name="yewuneirong">业务内容</string>
    <string name="yuedurenwutongji">月度任务统计</string>
    <string name="benyueheji">本月已完成合计</string>
    <string name="benyuechaju">本月任务差距</string>
    <string name="nodatas1">商业pos没有数据</string>
    <string name="nodatas2">摄像头没有数据</string>
    <string name="nodatas3">pad没有数据</string>
    <string name="nodatas4">金融pos没有数据</string>
    <string name="nodatas5">网络设备没有数据</string>
    <string name="nodatas6">电视没有数据</string>
    <string name="nodatas7">电子秤没有数据</string>
    <string name="nodatas8">软件没有数据</string>
    <string name="nodatas9">便民终端没有数据</string>
    <string name="nodatas">没有数据</string>
    <string name="huansuanlv">换算率</string>
    <string name="xiaoshoue">销售额</string>
    <string name="quxian">～</string>
    <string name="shixiandejifen">实现的积分</string>
    <string name="zongrenwuzhibiao">总任务指标</string>
    <string name="yuedurenwuzhibiao">月度任务指标</string>
    <string name="yiwanchengrenwu">已完成任务</string>
    <string name="shengyurenwu">剩余任务</string>
    <string name="shebeilist">设备列表</string>
    <string name="pos">商业pos</string>
    <string name="moneypos">金融pos</string>
    <string name="camera">摄像头</string>
    <string name="pad">pad</string>
    <string name="wangluoshebei">网络设备</string>
    <string name="tv">电视</string>
    <string name="dianzicheng">电子秤</string>
    <string name="soft">软件</string>
    <string name="bianminzhongduan">便民终端</string>
    <string name="weixiuzhong">维修中</string>
    <string name="stopuse">维修中</string>
    <string name="saled">购入</string>
    <string name="fixed">报修</string>
    <string name="fixedhis">报修历史查询</string>
    <string name="qingshuruyuanmima">请输入原密码</string>
    <string name="feikong">请输入20位以内非空字符</string>
    <string name="modifyclerk">店员情报修改</string>
    <string name="xingming">姓名</string>
    <string name="dianhua">电话</string>
    <string name="denglumima">登录密码</string>
    <string name="querenmima">确认密码</string>
    <string name="quanxian"> 权  限</string>
    <string name="assistantinfo">店员信息录入</string>
    <string name="name"> 姓  名   </string>
    <string name="mobile"> 电  话   </string>
    <string name="loginname">登 录 名 </string>
    <string name="dianyuanhuizong">各门店店员数汇总 </string>
    <string name="dianpuxuhao">    序号 </string>
    <string name="mendian">门店</string>
    <string name="dianyuanrenshu">店员人数 </string>
    <string name="zhengzaijiazaishuju">正在加载数据</string>
    <string name="shanchugaidianyuan">将该店员从列表中删除?</string>
    <string name="quxiao">取消</string>
    <string name="queren">确认</string>
    <string name="dianyuanyilan">店员一览</string>
    <string name="xiugai">修改</string>
    <string name="shanchu">删除</string>
    <string name="baoxiuri">报修日</string>
    <string name="weixiuzhuangtai">维修状态</string>
    <string name="baoxiujilu">报修记录</string>
    <string name="caozuo">操作</string>
    <string name="lianjie">~</string>
    <string name="qijian">期间：</string>
    <string name="baoxiumingxi">报修明细</string>
    <string name="weixiubianhao">维修编号</string>
    <string name="shebeibianhao">设备编号</string>
    <string name="shebeileixing">设备类型</string>
    <string name="shebeipinpai">设备品牌</string>
    <string name="shebeixinghao">设备型号</string>
    <string name="shebeixuliehao">设备序列号</string>
    <string name="shebeiyuanshihao">设备原始号</string>
    <string name="weixiuyuanyin">维修原因</string>
    <string name="weixiujieguo">维修结果</string>
    <string name="vipinformation">会员注册</string>
    <string name="vipinforxiugai">会员修改</string>
    <string name="vipleixing">会员类型</string>
    <string name="vipmobile">手机号码</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">生日</string>
    <string name="address">住址</string>
    <string name="beizhu">备注</string>
    <string name="tijiao">正在提交注册信息，请耐心等待</string>
    <string name="huiyuanxiangxixinxi">会员详细信息</string>
    <string name="xzhl0160_name">会员姓名</string>
    <string name="xzhl0160_type">会员类型</string>
    <string name="xzhl0160_tel">手机号码</string>
    <string name="xzhl0160_sex">性别</string>
    <string name="xzhl0160_birthday">生日</string>
    <string name="xzhl0160_address">住址</string>
    <string name="xzhl0160_remark">备注</string>
    <string name="xiaoxiyilan">消息一览</string>
    <string name="tongzhiyilan">通知一览</string>
    <string name="shuaxin">刷新</string>
    <string name="xiaoxixiangxi">消息详细显示</string>
    <string name="xingming1210">姓名</string>
    <string name="dengluming1210">登录名</string>
    <string name="quanxian1210">权限</string>
    <string name="namespace">名称</string>
    <string name="sale">销售价格</string>
    <string name="kindof">品类</string>
    <string name="shoplist">商品信息查询</string>
    <string name="commodityname">请输入商品名称</string>
    <string name="xiugai1210">修改该店员</string>
    <string name="shanchu1210">删除该店员</string>
    <string name="xzhl1410_toolbar">金融数据查询</string>
    <string name="xzhl1410_qtxs">前台销售</string>
    <string name="xzhl1410_pfxs">批发销售</string>
    <string name="xzhl1410_time">当前时间</string>
    <string name="xzhl1410_shopname">门店名称</string>
    <string name="xzhl1410_shopadd">门店地址</string>
    <string name="xzhl1410_shoptel">门店电话</string>
    <string name="xzhl1410_contact">联系人</string>
    <string name="xzhl0830_display">商品详细信息</string>
    <string name="xzhl0830_name">商品名称</string>
    <string name="xzhl0830_cateloge">商品品类</string>
    <string name="xzhl0830_num">商品货号</string>
    <string name="xzhl0830_cun">库存</string>
    <string name="xzhl0830_gongyingshang">供应商</string>
    <string name="xzhl0830_price">市场价格</string>
    <string name="xzhl0830_shijiprice">实际销售价</string>
    <string name="xzhl1010_toolbar">自店产品广告一览</string>
    <string name="xzhl1010_search">请输入关键字</string>
    <string name="xzhl1010_no">序号</string>
    <string name="xzhl1010_hdmc">活动名称</string>
    <string name="xzhl1010_cjje">成交金额</string>
    <string name="xzhl1010_hdsj">活动时间</string>
    <string name="mailinfo">邮寄信息一览</string>
    <string name="inputorder">请输入订单号</string>
    <string name="xzhl0620_order_id">订单号</string>
    <string name="xzhl0620_membername">会员名</string>
    <string name="xzhl0620_status">发货状态</string>
    <string name="xzhl1010_change">修改该条信息</string>
    <string name="xzhl1010_delete">删除该条信息</string>
    <string name="changegoods">修改商品</string>
    <string name="deletegoods">删除商品</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="productadvise">商城商品广告一览</string>
    <string name="keyword">请输入关键词</string>
    <string name="shangpinmingcheng">商品名称</string>
    <string name="shangpinpinlei">商品品类</string>
    <string name="shangpinhuohao">商品货号</string>
    <string name="kucun">库存</string>
    <string name="gongyingshang">供应商</string>
    <string name="shichangjiage">市场价格</string>
    <string name="shijixiaoshoujia">实际销售价</string>
    <string name="shangpinxiugai">商品修改</string>
    <string name="goodsinput">商品录入</string>
    <string name="huiyuanmdianhua">请输入会员姓名或联系电话</string>
    <string name="huiyuanliebiao">会员列表</string>
    <string name="dianhuahaoma">手机号码</string>
    <string name="xzhl1810_hottitile">热区分布显示</string>
    <string name="xzhl1810_hotdevice">设备</string>
    <string name="xzhl1710_search">搜索</string>
    <string name="xzhl1710_searchtype">检索模式</string>
    <string name="xzhl1710_charttype">图表类型</string>
    <string name="xzhl1710_ontime">即时客流</string>
    <string name="xzhl1710_history">历史客流</string>
    <string name="xzhl1710_passengerflow">客流统计</string>
    <string name="xzhl1710_linkshow">合并显示</string>
    <string name="xzhl1710_singleshow">个别显示</string>
    
   <string name="title_activity_xzhl0130__main">XZHL0130_MainActivity</string>
    <string name="title_activity_xzhl0130__settings">XZHL0130_SettingsActivity</string>
    <string name="date">日期</string>
    <string name="time">时间</string>

</resources>