<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".XZHL0210_ShowQuestioniareActivity"
    android:orientation="vertical"  >
<RelativeLayout 
    android:id="@+id/rv_listhead_0210"
    android:layout_width="fill_parent"
    android:layout_height="60.0dp"
    android:background="#41a9ef" >
    <Button
        android:id="@+id/btn_goToMain_0210"
        android:layout_width="35.0dp"
        android:layout_height="35.0dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/arrow"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp" />
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:gravity="center"
        android:text="@string/wenjuanming"
        android:textColor="#FFFFFF"
        android:textSize="20.0sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_shuxinList_0210"
         android:layout_width="35.0dp"
        android:layout_height="35.0dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/refurbish"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />
</RelativeLayout>
    <LinearLayout 
        android:id="@+id/ll_titleheader_0210"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FF6d6c6c"
        >
        <TextView 
            android:id="@+id/tv_xuhao_0210"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/xuhao"/>
         <TextView 
            android:id="@+id/tv_wenjuanliebiao_0210"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/wenjuanliebiao"/>
        <TextView 
            android:id="@+id/tv_jifen_0210"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/jifen"/> 
        <TextView 
            android:id="@+id/tv_renwuhuishu_0210"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
             android:textColor="#FFFFFF"
            android:text="@string/renwuhuishu"/> 
            <TextView 
            android:id="@+id/tv_yihuidashu_0210"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
             android:textColor="#FFFFFF"
            android:text="@string/yihuidashu"/> 
    </LinearLayout>
     <ProgressBar 
        android:id="@+id/pb_pblist_0210"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />
   <ListView 
    android:id="@+id/lv_listSurvey_0210"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:dividerHeight="1dp"
    android:divider="@drawable/bg_topbar"
    /> 

</LinearLayout>

