<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <include 
       android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
       layout="@layout/xzhl0830_shopalldisplay_toolbar"
              />
   <!-- 商品名称 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_product_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
     <!-- 商品品类 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_cateloge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_catloge_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
     <!-- 商品货号 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_num"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_num_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
     <!-- 库存 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_cun"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_cun_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
     <!-- 供应商 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_gongyingshang"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_gongying_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
       <!-- 市场价格 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_price"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_price_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
        <!-- 实际销售价 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzhl0830_shijiprice"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_shiji_0830"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:singleLine="true"
             />
    </LinearLayout>
   </LinearLayout>