<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dip"
      android:background="@color/white"
      android:gravity="center"
      android:layout_marginLeft="20dp"
      android:orientation="horizontal"
      android:focusable="true"
      android:focusableInTouchMode="true">
         <EditText
             android:id="@+id/et_starttime_1710"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_marginTop="5dip"
             android:layout_marginBottom="5dip"
             style="?android:attr/borderlessButtonStyle"
             android:background="@drawable/xzhl1710_bg_edittext">

         </EditText>
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/lianjie" />
         <EditText
             android:id="@+id/et_endtime_1710"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:layout_marginTop="5dip"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="5dip"
             style="?android:attr/borderlessButtonStyle"
             android:background="@drawable/xzhl1710_bg_edittext">
             
         </EditText>
         <Button
             android:id="@+id/btn_search_1710"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_marginRight="25dp"
             android:layout_marginBottom="5dip"
             android:text="@string/xzhl1710_search"
             android:textColor="@color/white"
             style="?android:attr/borderlessButtonStyle"
             android:background="@drawable/xzhl1710_searchbuttonstyle">
         </Button>
    </LinearLayout>
    <ImageView
             android:contentDescription="@null"
             android:layout_width="match_parent"
             android:layout_height="1dip"
             android:background="@color/searchbackground">
         </ImageView>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dip"
      android:background="@color/white"
      android:layout_marginLeft="20dp"
      android:gravity="center_vertical"
      android:orientation="horizontal" >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_marginBottom="5dip"
             android:text="@string/xzhl1710_searchtype">
             
         </TextView>
         <Spinner
             android:id="@+id/sp_daytype_1710"
             android:layout_width="80dip"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_marginLeft="10dip">
             
         </Spinner>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="5dip"
             android:text="@string/xzhl1710_charttype">
             
         </TextView>
         <Spinner
             android:id="@+id/sp_charttype_1710"
             android:layout_width="120dip"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:layout_marginLeft="10dip">
             
         </Spinner>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rg_showtype_1710"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:gravity="left|center"
        android:orientation="horizontal">
		<RadioButton
		    android:id="@+id/rb_link_1710"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:checked="true"
		    android:text="@string/xzhl1710_linkshow" />		
		<RadioButton
		    android:id="@+id/rb_single_1710"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/xzhl1710_singleshow" />
	</RadioGroup>
	<ImageView
	    android:id="@+id/iv_chart_1710"
         android:contentDescription="@null"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="20dip"
         android:background="@color/searchbackground">
    </ImageView>
</LinearLayout>
