<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/xzhl1240_topbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6d6c6c"
        android:orientation="horizontal" 
        android:paddingRight="13dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/dianpuxuhao"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_weight="4"
            android:gravity="left|center"
            android:text="@string/mendian"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:gravity="left|center"
            android:text="@string/dianyuanrenshu"
            android:textColor="@color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading_1240"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <ListView
        android:id="@+id/lv_dianyuanshu_1240"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>